apps/base/homer/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer
  labels:
    app.kubernetes.io/component: monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: homer-data
            mountPath: /www/assets
      volumes:
        - name: homer-data
          persistentVolumeClaim:
            claimName: homer-data-pvc
