apps/base/homer/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  ports:
    - port: 8080
  selector:
    app: homer
  type: ClusterIP
